# aws-data-wrangler

./: pyproject.toml
.github/workflows/: static-checking.yml
awswrangler/: _databases.py  redshift.py
awswrangler/athena/: _read.py
awswrangler/s3/: _write_parquet.py  _write_text.py
src/: awswrangler
