[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | .vscode
  | dev
  | .coverage
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
src_paths = ["setup.py", "awswrangler"]
py_version = 36
skip_gitignore = true

[tool.poetry]
name = "awswrangler"
version = "2.6.0"
description = "Forked from original aws-data-wrangler"
authors = ["Machine Learning Platform Team <tech.ml.platform@glovoapp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = ">=1.12.49,<2.0.0"
botocore = ">=1.15.49,<2.0.0"
numpy = ">=1.18.0,<1.21.0"
pandas = ">=1.1.0,<1.3.0"
pyarrow = ">=2.0.0,<3.1.0"
redshift-connector = "~=2.0.0"
PyMySQL = ">=0.9.0,<1.1.0"
pg8000 = ">=1.16.0,<1.18.0"
openpyxl = "~=3.0.0"

[tool.poetry.dev-dependencies]
wheel = "==0.36.2"
isort = "==5.7.0"
black = "==20.8b1"
pylint = "==2.7.2"
flake8 = "==3.8.4"
mypy = "==0.812"
pydocstyle = "==5.1.1"
doc8 = "==0.8.1"
tox = "==3.22.0"
pytest = "==6.2.2"
pytest-cov = "==2.11.1"
pytest-xdist = "==2.2.1"
pytest-timeout = "==1.4.2"
cfn-lint = "==0.46.0"
pydot = "==1.4.2"
cfn-flip = "==1.2.3"
twine = "==3.3.0"
Sphinx = "==3.5.1"
sphinx-bootstrap-theme = "==0.7.1"
nbsphinx = "==0.8.2"
nbsphinx-link = "==1.3.0"
IPython = "^2.0.0"
moto = "==2.0.0"
jupyterlab = "==3.0.9"
s3fs = "==0.4.2"
python-Levenshtein = "==0.12.2"
bump2version = "1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
